--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -3,6 +3,7 @@
 {{ if eq .chezmoi.os "darwin" -}}
 # For macOS
 export PATH="/opt/homebrew/opt/grep/libexec/gnubin:$PATH"
+export PATH="/Applications/MacVim.app/Contents/bin:$PATH"
 
 # Created by `pipx` on 2022-09-02 06:31:35
 export PATH="$PATH:/Users/mushi007/.local/bin"
