update my dotfile

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -35,8 +35,8 @@ export GRIPHOME="$XDG_CONFIG_HOME/grip"
 export IPYTHONDIR="${XDG_CONFIG_HOME}/ipython"
 
 # Default Apps
-export EDITOR="vim"
-export TERMINAL="kitty"
+export EDITOR="neovim"
+export TERMINAL="alacritty"
 export BROWSER="chrome"
 export VIDEO="mpv"
 
