--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -3,7 +3,7 @@
 {{ if eq .chezmoi.os "darwin" -}}
 # For macOS
 eval "$(/opt/homebrew/bin/brew shellenv)"
-GPG_TTY=$(tty)
+# GPG_TTY=$(tty)
 {{ else if eq .chezmoi.os "linux" -}}
 {{ end -}}
 
@@ -25,8 +25,6 @@ export CARGO_HOME="$XDG_DATA_HOME"/cargo
 export RUSTUP_HOME="$XDG_DATA_HOME"/rustup
 export RIPGREP_CONFIG_PATH="$XDG_CONFIG_HOME/ripgrep/ripgreprc"
 export NODE_REPL_HISTORY="$XDG_DATA_HOME"/node_repl_history
-export TERMINFO="$XDG_DATA_HOME"/terminfo
-export TERMINFO_DIRS="$XDG_DATA_HOME"/terminfo:/usr/share/terminfo
 export MYSQL_HISTFILE="$XDG_DATA_HOME"/mysql_history
 export LESSHISTFILE="$XDG_CACHE_HOME"/less/history
 export GRIPHOME="$XDG_CONFIG_HOME/grip"
@@ -35,8 +33,8 @@ export GRIPHOME="$XDG_CONFIG_HOME/grip"
 export IPYTHONDIR="${XDG_CONFIG_HOME}/ipython"
 
 # Default Apps
-export EDITOR="neovim"
-export TERMINAL="alacritty"
+export EDITOR="lvim"
+export TERMINAL="kitty"
 export BROWSER="chrome"
 export VIDEO="mpv"
 
