--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -51,6 +51,7 @@ vterm_printf(){
 alias ls='exa'
 alias e='emacsclient -a "" -c -n "$@"'
 alias diff='icdiff'
+alias vim='lvim'
 
 {{ if eq .chezmoi.os "darwin" -}}
 # For macOS
