--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -41,3 +41,6 @@ export VIDEO="mpv"
 # Doom Emacs
 export PATH="$HOME/.emacs.d/bin:$PATH"
 . "/Users/mushi007/.local/share/cargo/env"
+
+# Ranger 
+export RANGER_LOAD_DEFAULT_RC=FALSE
