--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -52,6 +52,7 @@ alias ls='exa'
 alias e='emacsclient -a "" -c -n "$@"'
 alias diff='icdiff'
 alias vim='lvim'
+alias ra='ranger'
 
 {{ if eq .chezmoi.os "darwin" -}}
 # For macOS
