update my dotfile

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -19,8 +19,6 @@ export GEM_HOME="$XDG_DATA_HOME/ruby/gems"
 export NPM_CONFIG_USERCONFIG=$XDG_CONFIG_HOME/npm/npmrc
 export GOPATH="$XDG_DATA_HOME"/go
 export GNUPGHOME="$XDG_DATA_HOME"/gnupg
-export _JAVA_OPTIONS=-Djava.util.prefs.userRoot="$XDG_CONFIG_HOME"/java
-export HISTFILE="$XDG_DATA_HOME"/zsh/history
 export CARGO_HOME="$XDG_DATA_HOME"/cargo
 export RUSTUP_HOME="$XDG_DATA_HOME"/rustup
 export RIPGREP_CONFIG_PATH="$XDG_CONFIG_HOME/ripgrep/ripgreprc"
@@ -40,7 +38,7 @@ export VIDEO="mpv"
 
 # Doom Emacs
 export PATH="$HOME/.emacs.d/bin:$PATH"
-. "/Users/mushi007/.local/share/cargo/env"
 
 # Ranger 
 export RANGER_LOAD_DEFAULT_RC=FALSE
+. "/home/mushi/.local/share/cargo/env"
